vume foton e aktivitetit dhe kode refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">todo</string>
     <string name="select">Select Item</string>
-    <string name="inserte">Insert</string>
+    <string name="inserte">Vendos</string>
 </resources>
